--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,5 @@
-#+title: Denote var
+#+title: Denote Statistics
+#+author: Peter Prevos
 
 The [[https://protesilaos.com/emacs/denote][Denote package]] by Protesilaos Stavropol provides excellent functionality to create, retrieve, manage and link notes in plain text, Markdown and Org Mode.
 
