--- a/readme.org
+++ b/readme.org
@@ -3,11 +3,9 @@
 
 The [[https://protesilaos.com/emacs/denote][Denote package]] by Protesilaos Stavropol provides excellent functionality to create, retrieve, manage and link notes in plain text, Markdown and Org Mode.
 
-The `denote-stats` package provides some convenience functions to help you manage your collection of notes.
+The =denote-stats= package provides some convenience functions to help you manage your collection of notes. This package has limited utility and is a practice ground to learn Elisp.
 
-This package has limited utility and is a practice ground to learn Elisp.
-
-The visualisations for this package are provided by the built-in =chart= package, which is a quaint visualisation tool that creates bar charts in plain text.
+The visualisations for this package are provided by the built-in =chart.el= package by Eric M. Ludlam, which is a quaint visualisation tool that creates bar charts in plain text.
 
 * Available functions
 The following interactive functions are provided by this package:
@@ -17,9 +15,10 @@ The following interactive functions are provided by this package:
 - =denote-stats-keywords-barchart=: Visualise the top-/n/ keywords.
 
 #+caption: Example of a bar chart of top-20 keywords in the chart package.
+#+attr_org: :width 600
 [[file:denote-keywords-barchart.png]]
 
-* Work in progress
+* Planned and work in progress
 - Visualise file extensions
 - List keywords only mentioned once
 - Visualise by year
