--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,4 @@
-#+title: Denote Statistics
+#+title: Denote Extra: Convenience Functions for the Emacs Denote Package
 #+author: Peter Prevos
 
 The [[https://protesilaos.com/emacs/denote][Denote package]] by Protesilaos Stavropol provides extensive functionality to create, retrieve, manage and link notes in plain text, Markdown and Org Mode. The most redeeming quality of this package is its simplicity and that it works a box of Lego. This package provides many entry points to extend functionality and use your computer the way you want to, instead of the other way around.
