--- a/readme.org
+++ b/readme.org
@@ -28,6 +28,23 @@ You can also visualise the most commonly used keywords and file types with a bar
 #+attr_org: :width 600
 [[file:denote-keywords-barchart.png]]
 
+** Add Statistics to Emacs Dashboard
+You can use these functions with the [[https://github.com/emacs-dashboard/emacs-dashboard][Emacs Dashboard]] by Rakan Al-Hneiti and others. The code snippet below adds a count of your notes and keywords to the bottom of your dashboard. This setup assumes you have [[https://github.com/domtronn/all-the-icons.el][all-the-icons]] installed.
+
+#+begin_src elisp :result none
+  (defun dashboard-insert-denote-stats (list-size)
+    (insert (concat
+             (denote-explore-count-notes) " | "
+             (denote-explore-count-keywords))))
+
+  (add-to-list 'dashboard-item-generators
+               '(denote . dashboard-insert-denote-stats))
+
+  (add-to-list 'dashboard-items '(denote) t)
+#+end_src
+
+If you like to change the location of the Denote statistics, then modify =dashboard-items= to your satisfaction. 
+
 * Take a Random Walk
 When asking creative people where they get their inspiration, the answer is often vague and even mystical. The honest answer is, more often than not, the connection of random bits of information.
 
